@@ -1,10 +1,10 @@
-# $Id: config.rb,v 1.45 2005-06-07 09:10:54 fdiary Exp $
+# $Id: config.rb,v 1.46 2005-06-08 05:12:43 fdiary Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
 
 HIKI_VERSION  = '0.8.0'
-HIKI_RELEASE_DATE = '2005-06-07'
+HIKI_RELEASE_DATE = '2005-06-08'
 
 require 'cgi'
 require 'hiki/command'
